# biomed-multi-alignment

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLONE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  ---question.md
.github/workflows/: clone.yml  github-actions-demo.yml  github-actions.yml
mammal/: keys.py  lora.py  losses.py  lr_schedulers.py  main_finetune.py  metrics.py  model.py  task.py
mammal/examples/carcinogenicity/: config.yaml  main_infer.py  pl_data_module.py  playground.ipynb  task.py
mammal/examples/dti_bindingdb_kd/: config.yaml  main_infer.py  pl_data_module.py  task.py
mammal/examples/molnet/: molnet_infer.py
mammal/examples/protein_solubility/: config.yaml  main_infer.py  pl_data_module.py  task.py
mammal/examples/tcr_epitope_binding/: main_infer.py
mammal/examples/tests/: test_drug_carcinogenicity_classification.py  test_dti_bindingdb_kd.py  test_main_finetune.py  test_molnet.py  test_protein_solubility_prediction.py  test_simple_inference.py  test_tcr_epitope_binding_inference.py
tutorials/: advanced_create_new_task.ipynb  advanced_new_task.ipynb  affinity_fine_tune_mammal.ipynb  begginer_inference.ipynb
